<resources>
    <string name="app_name">오늘의 카드</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="select_a_card">프로필 카드 중 한장을 선택하세요.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today_card">오늘의 카드</string>
    <string name="remain_time">남은 시간</string>
    <string name="action_my_info">내 정보</string>
    <string name="action_notification">알림판</string>
    <string name="action_store">상점</string>
</resources>
